2000-12-01  Marcus Brinkmann  <marcus@gnu.org>

	* cache.c (scan_creds): Move I inside for-statement.
	Replace inner for-loop with a while-loop. New variable
	NEXT_I set to I->NEXT, because we might free I.
	Set I to NEXT_I at end of while block.
	Move update of leastidlastuse inside if block, because
	otherwise we will constantly prevent ourself from scanning.
	(scan_fhs): Very much the same.
	(scan_replies): Likewise. Also free CR.

	(check_cached_reply): Make HASH value absolute (as XID can be
	negative, and thus the modulus).
	Initialize REFERENCES to 1.

2000-03-17  Thomas Bushnell, BSG  <tb@mit.edu>

	* cache.c (create_cached_handle): Add comment.

1999-07-10  Roland McGrath  <roland@baalperazim.frob.com>

	* cache.c: Add #include <sys/mman.h> for munmap decl.

1999-07-03  Thomas Bushnell, BSG  <tb@mit.edu>

	* cache.c (create_cached_handle): Use munmap instead of
	vm_deallocate.

1998-12-20  Roland McGrath  <roland@baalperazim.frob.com>

	* loop.c (server_loop): Cosmetic.

	* nfsd.h: Include <rpc/types.h>.
	(bool_t, enum_t): Remove typedefs.

1998-10-20  Roland McGrath  <roland@baalperazim.frob.com>

	* cache.c (scan_creds): Add braces to silence gcc warning.
	(scan_fhs): Likewise.
	(scan_replies): Likewise.

Thu Sep 26 14:09:20 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* nfsd.h (enum_t): New type.

	* cache.c: Don't inclide <rpc/auth_unix.h>.

Thu Sep 12 16:52:13 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* Makefile (HURDLIBS): New variable.
	(nfsd): Delete special depedency.

Tue Sep  3 14:15:50 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* loop.c: Include "../nfs/mount.h" instead of
	"../nfs/rpcsvc/mount.h".
	* ops.c: Likewise.
	* nfsd.h: Include "../nfs/nfs-spec.h" instead of
	"../nfs/rpcsvc/nfs_prot.h".

Wed Aug 14 13:46:45 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* ops.c (nfstable): Renamed to nfs2table.
	* nfsd.h (nfstable): Likewise.